--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -356,7 +356,11 @@
         </div>
 
     </div>
-
+<div style="color: #70b6f3; font-style: italic; font-family: monospace; font-size: smaller; font-weight: bolder" align="center">
+    <span>
+        Copyright © 2023 ALl rights reserved to the DEVELOPERS: Rahul,Dinesh,Sampransh,Suryadip & Subhayan
+    </span>
+</div>
 {% endblock %}
 
 
