--- a/website/templates/index.html
+++ b/website/templates/index.html
@@ -73,7 +73,7 @@
 <form method="POST" action="/predict">
     <h3 align="center" style="color: #fff; font-weight: bold">Rate Yourself</h3>
 
-    <div class="" style="border-bottom: 1px solid black;">
+    <div class="" style="border-bottom: 1px solid black; font-size: 12px">
         <div class="outerDiv">
             <div class="leftDiv" style="width: 100%; padding-right: 10px">
 				<div class="form-group row">
@@ -81,12 +81,14 @@
 							<div class="col-sm-9">
 							<select class="form-select form-control" required aria-label="select example" name="rate_Database Fundamentals" style="width: 70%">
 								  <option value="">Choose option</option>
-								 <option value="1">Not Interested</option>
+								 	<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
 									<option value="3">Beginner</option>
+									<option value="4">Below Average</option>
 									<option value="5">Average</option>
-									<option value="6">Intermediate</option>
-									<option value="7">Excellent</option>
+									<option value="6">Above Average</option>
+									<option value="7">Intermediate</option>
+									<option value="8">Excellent</option>
 									<option value="9">Professional</option>
 								</select>
 
@@ -100,9 +102,11 @@
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
 									<option value="3">Beginner</option>
+									<option value="4">Below Average</option>
 									<option value="5">Average</option>
-									<option value="6">Intermediate</option>
-									<option value="7">Excellent</option>
+									<option value="6">Above Average</option>
+									<option value="7">Intermediate</option>
+									<option value="8">Excellent</option>
 									<option value="9">Professional</option>
 							 </select>
 						    </div>
@@ -110,14 +114,16 @@
 				<div class="form-group row">
 							<label  class="col-sm-3  col-form-label">Distributed Computing Systems</label>
 							<div class="col-sm-9">
-							 <select class="form-select form-control" required aria-label="select example" name="rate_Distributed Computing Systems" style="width: 70%">
+							 <select class="form-select form-control" required aria-label="select example" name="rate_Distributed Computing" style="width: 70%">
 							        <option value="">Choose option</option>
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
 									<option value="3">Beginner</option>
+									<option value="4">Below Average</option>
 									<option value="5">Average</option>
-									<option value="6">Intermediate</option>
-									<option value="7">Excellent</option>
+									<option value="6">Above Average</option>
+									<option value="7">Intermediate</option>
+									<option value="8">Excellent</option>
 									<option value="9">Professional</option>
 							 </select>
 						    </div>
@@ -130,9 +136,11 @@
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
 									<option value="3">Beginner</option>
+									<option value="4">Below Average</option>
 									<option value="5">Average</option>
-									<option value="6">Intermediate</option>
-									<option value="7">Excellent</option>
+									<option value="6">Above Average</option>
+									<option value="7">Intermediate</option>
+									<option value="8">Excellent</option>
 									<option value="9">Professional</option>
 							 </select>
 						    </div>
@@ -140,14 +148,16 @@
 				<div class="form-group row">
 							<label  class="col-sm-3  col-form-label">Computer Networking</label>
 							<div class="col-sm-9">
-							 <select class="form-select form-control" required aria-label="select example" name="rate_Networking" style="width: 70%">
+							 <select class="form-select form-control" required aria-label="select example" name="rate_Computer Networking" style="width: 70%">
 							        <option value="">Choose option</option>
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
 									<option value="3">Beginner</option>
+									<option value="4">Below Average</option>
 									<option value="5">Average</option>
-									<option value="6">Intermediate</option>
-									<option value="7">Excellent</option>
+									<option value="6">Above Average</option>
+									<option value="7">Intermediate</option>
+									<option value="8">Excellent</option>
 									<option value="9">Professional</option>
 							 </select>
 						    </div>
@@ -155,14 +165,16 @@
 				<div class="form-group row">
 							<label  class="col-sm-3  col-form-label">Software Development</label>
 							<div class="col-sm-9">
-							 <select class="form-select form-control" required aria-label="select example" name="rate_Development" style="width: 70%">
+							 <select class="form-select form-control" required aria-label="select example" name="rate_Software Development" style="width: 70%">
 							        <option value="">Choose option</option>
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
 									<option value="3">Beginner</option>
+									<option value="4">Below Average</option>
 									<option value="5">Average</option>
-									<option value="6">Intermediate</option>
-									<option value="7">Excellent</option>
+									<option value="6">Above Average</option>
+									<option value="7">Intermediate</option>
+									<option value="8">Excellent</option>
 									<option value="9">Professional</option>
 							 </select>
 						    </div>
@@ -175,9 +187,11 @@
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
 									<option value="3">Beginner</option>
+									<option value="4">Below Average</option>
 									<option value="5">Average</option>
-									<option value="6">Intermediate</option>
-									<option value="7">Excellent</option>
+									<option value="6">Above Average</option>
+									<option value="7">Intermediate</option>
+									<option value="8">Excellent</option>
 									<option value="9">Professional</option>
 							 </select>
 						    </div>
@@ -190,24 +204,28 @@
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
 									<option value="3">Beginner</option>
+									<option value="4">Below Average</option>
 									<option value="5">Average</option>
-									<option value="6">Intermediate</option>
-									<option value="7">Excellent</option>
+									<option value="6">Above Average</option>
+									<option value="7">Intermediate</option>
+									<option value="8">Excellent</option>
 									<option value="9">Professional</option>
 							 </select>
 						    </div>
 				</div>
 				<div class="form-group row">
-							<label  class="col-sm-3  col-form-label">Computer Forensics Fundamentals</label>
+							<label  class="col-sm-3  col-form-label">Computer Fundamentals</label>
 							<div class="col-sm-9">
-							 <select class="form-select form-control" required aria-label="select example" name="rate_Computer Forensics Fundamentals" style="width: 70%">
+							 <select class="form-select form-control" required aria-label="select example" name="rate_Computer Fundamentals" style="width: 70%">
 							        <option value="">Choose option</option>
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
 									<option value="3">Beginner</option>
+									<option value="4">Below Average</option>
 									<option value="5">Average</option>
-									<option value="6">Intermediate</option>
-									<option value="7">Excellent</option>
+									<option value="6">Above Average</option>
+									<option value="7">Intermediate</option>
+									<option value="8">Excellent</option>
 									<option value="9">Professional</option>
 							 </select>
 						    </div>
@@ -215,14 +233,16 @@
 				<div class="form-group row">
 							<label  class="col-sm-3  col-form-label">Technical Communication skills</label>
 							<div class="col-sm-9">
-							 <select class="form-select form-control" required aria-label="select example" name="rate_Technical Communication" style="width: 70%">
+							 <select class="form-select form-control" required aria-label="select example" name="rate_Technical Communication Skills" style="width: 70%">
 							        <option value="">Choose option</option>
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
 									<option value="3">Beginner</option>
+									<option value="4">Below Average</option>
 									<option value="5">Average</option>
-									<option value="6">Intermediate</option>
-									<option value="7">Excellent</option>
+									<option value="6">Above Average</option>
+									<option value="7">Intermediate</option>
+									<option value="8">Excellent</option>
 									<option value="9">Professional</option>
 							 </select>
 						    </div>
@@ -235,9 +255,11 @@
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
 									<option value="3">Beginner</option>
+									<option value="4">Below Average</option>
 									<option value="5">Average</option>
-									<option value="6">Intermediate</option>
-									<option value="7">Excellent</option>
+									<option value="6">Above Average</option>
+									<option value="7">Intermediate</option>
+									<option value="8">Excellent</option>
 									<option value="9">Professional</option>
 							 </select>
 						    </div>
@@ -245,14 +267,16 @@
 				<div class="form-group row">
 							<label  class="col-sm-3  col-form-label">Software Engineering</label>
 							<div class="col-sm-9">
-							 <select class="form-select form-control" required aria-label="select example" name="rate_se" style="width: 70%">
+							 <select class="form-select form-control" required aria-label="select example" name="rate_Software Engineering" style="width: 70%">
 							        <option value="">Choose option</option>
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
 									<option value="3">Beginner</option>
+									<option value="4">Below Average</option>
 									<option value="5">Average</option>
-									<option value="6">Intermediate</option>
-									<option value="7">Excellent</option>
+									<option value="6">Above Average</option>
+									<option value="7">Intermediate</option>
+									<option value="8">Excellent</option>
 									<option value="9">Professional</option>
 							 </select>
 						    </div>
@@ -265,9 +289,11 @@
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
 									<option value="3">Beginner</option>
+									<option value="4">Below Average</option>
 									<option value="5">Average</option>
-									<option value="6">Intermediate</option>
-									<option value="7">Excellent</option>
+									<option value="6">Above Average</option>
+									<option value="7">Intermediate</option>
+									<option value="8">Excellent</option>
 									<option value="9">Professional</option>
 							 </select>
 						    </div>
@@ -280,9 +306,11 @@
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
 									<option value="3">Beginner</option>
+									<option value="4">Below Average</option>
 									<option value="5">Average</option>
-									<option value="6">Intermediate</option>
-									<option value="7">Excellent</option>
+									<option value="6">Above Average</option>
+									<option value="7">Intermediate</option>
+									<option value="8">Excellent</option>
 									<option value="9">Professional</option>
 							 </select>
 						    </div>
@@ -295,9 +323,11 @@
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
 									<option value="3">Beginner</option>
+									<option value="4">Below Average</option>
 									<option value="5">Average</option>
-									<option value="6">Intermediate</option>
-									<option value="7">Excellent</option>
+									<option value="6">Above Average</option>
+									<option value="7">Intermediate</option>
+									<option value="8">Excellent</option>
 									<option value="9">Professional</option>
 							 </select>
 						    </div>
@@ -310,9 +340,11 @@
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
 									<option value="3">Beginner</option>
+									<option value="4">Below Average</option>
 									<option value="5">Average</option>
-									<option value="6">Intermediate</option>
-									<option value="7">Excellent</option>
+									<option value="6">Above Average</option>
+									<option value="7">Intermediate</option>
+									<option value="8">Excellent</option>
 									<option value="9">Professional</option>
 							 </select>
 						    </div>
@@ -321,14 +353,16 @@
 				<div class="form-group row">
 							<label  class="col-sm-3  col-form-label">Graphics Designing</label>
 							<div class="col-sm-9">
-							 <select  class="form-control" name="rate" style="width: 70%">
+							 <select  class="form-control" name="rate_Graphics Designing" style="width: 70%">
 							        <option value="">Choose option</option>
 									<option value="1">Not Interested</option>
 									<option value="2">Poor</option>
 									<option value="3">Beginner</option>
+									<option value="4">Below Average</option>
 									<option value="5">Average</option>
-									<option value="6">Intermediate</option>
-									<option value="7">Excellent</option>
+									<option value="6">Above Average</option>
+									<option value="7">Intermediate</option>
+									<option value="8">Excellent</option>
 									<option value="9">Professional</option>
 							 </select>
 						    </div>
