--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -32,9 +32,9 @@
             <img src="static/images/career.png" height="372px" width="100%" style="padding: 9px">
         </div>
         <div>
-            <img src="static/images/front.png" height="372px" width="167%" style="padding: 9px">
+            <img src="static/images/front.png" height="215px" width="167%" style="padding: 9px">
         </div>
-        <!--<div style="margin-left: 20px">
+       <!--<div style="margin-left: 20px">
             <span style="font-size: 25px; font-weight: bold; font-family: cursive; color: red;">Confused</span>
             <span style="font-size: 20px; font-family: cursive; font-weight: bold;"> about career choice??? Get GUIDANCE from AI....</span></br></br>
             <span style="font-size:20px; font-family: monospace; font-weight: bold;">
@@ -89,8 +89,14 @@
             </div>
         </form>
     </div>
-    <div style="clear: both;"></div>
-</div>
 
+    <div style="clear: both;"></div>
+
+</div>
+<div style="color: #70b6f3; font-style: italic; font-family: monospace; font-size: smaller; font-weight: bolder" align="center">
+    <span>
+        Copyright © 2023 ALl rights reserved to the DEVELOPERS: Rahul,Dinesh,Sampransh,Suryadip & Subhayan
+    </span>
+</div>
 
 {% endblock %}
